--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Pakistan - Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <header>
-        <img src="banner.jpg" id="banner" alt="banner">
+    <div class="blackish-effect-container">
+        <div class="blackish-effect-overlay"></div>
         <div class="nav">
             <img src="icon.png" alt="icon">
             <button>Sign In</button>
@@ -16,8 +17,122 @@
         <div class="info">
             <h1>Unlimited movies, TV shows, and more</h1>
             <p>Watch anywhere. Cancel anytime.</p><br>
+            <form action="#">
+                <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
+                <div class="search">
+                    <input type="email" name="email" id="email" placeholder="Email address">
+                    <button id="start"><strong>Get Started</strong> ></button>
+                </div>
+            </form>
         </div>
-    </header>
+    </div>
+    <div class="sec">
+        <div class="heading">
+            <h1>Enjoy on your TV</h1>
+            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+        </div>
+        <div class="image">
+            <img src="tv.png" alt="tv">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v" autoplay loop muted playsinline></video>
+        </div>
+    </div>
+    <div class="bb"></div>
+    <div class="sec">
+        <div class="image">
+            <img src="mobile.jpg" alt="tv">
+            <div class="movie">
+                <img src="boxshot.png" alt="movie">
+                <div class="name">
+                    <p id="p1">Stranger Things</p>
+                    <p id="p2">Downloading...</p>
+                </div>
+                <img src="save.gif" alt="save">
+            </div>
+            
+        </div>
+        <div class="heading">
+            <h1>Download your shows to watch offline</h1>
+            <p>Save your favorites easily and always have something to watch.</p>
+        </div>
+    </div>
+    <div class="bb"></div>
+    <div class="sec" style="padding: 100px 0;">
+        <div class="heading">
+            <h1>Watch everywhere</h1>
+            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+        </div>
+    </div>
+    <div class="bb"></div>
+    <div class="sec">
+        <div class="image">
+            <img src="kid.png" alt="tv">
+        </div>
+        <div class="heading">
+            <h1>Enjoy on your TV</h1>
+            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+        </div>
+    </div>
+    <div class="bb"></div>
+    <div class="questions">
+        <h1>Frequently Asked Questions</h1>
+        <div class="q">
+            <div class="qa bb1 ques">
+                <p>What is Netflix?</p>
+                <span class="material-symbols-outlined add">add</span>
+            </div>
+            <div class="qa ans ansNo">
+                <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.<br><br>
+                You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</span>
+            </div>
+        </div>
+        <div class="q">
+            <div class="qa bb1 ques">
+                <p>How much does Netflix cost?</p>
+                <span class="material-symbols-outlined add">add</span>
+            </div>
+            <div class="qa ans ansNo">
+                <span>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from Rs 250 to Rs 1,100 a month. No extra costs, no contracts.</span>
+            </div>
+        </div>
+        <div class="q">
+            <div class="qa bb1 ques">
+                <p>Where can I watch?</p>
+                <span class="material-symbols-outlined add">add</span>
+            </div>
+            <div class="qa ans ansNo">
+                <span>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.<br><br>
+                You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</span>
+            </div>
+        </div>
+        <div class="q">
+            <div class="qa bb1 ques">
+                <p>How do I cancel?</p>
+                <span class="material-symbols-outlined add">add</span>
+            </div>
+            <div class="qa ans ansNo">
+                <span>Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</span>
+            </div>
+        </div>
+        <div class="q">
+            <div class="qa bb1 ques">
+                <p>What can I watch on Netflix?</p>
+                <span class="material-symbols-outlined add">add</span>
+            </div>
+            <div class="qa ans ansNo">
+                <span>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</span>
+            </div>
+        </div>
+        <div class="q">
+            <div class="qa bb1 ques">
+                <p>Is Netflix good for kids?</p>
+                <span class="material-symbols-outlined add">add</span>
+            </div>
+            <div class="qa ans ansNo">
+                <span>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.<br><br>
+                Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</span>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
