--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
         </div>
     </div>
     <div class="bb"></div>
-    <div class="sec">
+    <div class="sec reverse">
         <div class="image">
             <img src="mobile.jpg" alt="tv">
             <div class="movie">
-                <img src="boxshot.png" alt="movie">
                 <div class="name">
-                    <p id="p1">Stranger Things</p>
-                    <p id="p2">Downloading...</p>
+                    <img src="boxshot.png" alt="movie">
+                    <div class="p">
+                        <p id="p1">Stranger Things</p>
+                        <p id="p2">Downloading...</p>
+                    </div>
                 </div>
-                <img src="save.gif" alt="save">
+                <img src="save.gif" alt="save" id="gif">
             </div>
             
         </div>
@@ -57,19 +59,19 @@
     </div>
     <div class="bb"></div>
     <div class="sec" style="padding: 100px 0;">
-        <div class="heading">
+        <div class="heading h1">
             <h1>Watch everywhere</h1>
-            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+            <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
     </div>
     <div class="bb"></div>
-    <div class="sec">
+    <div class="sec reverse">
         <div class="image">
             <img src="kid.png" alt="tv">
         </div>
         <div class="heading">
-            <h1>Enjoy on your TV</h1>
-            <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+            <h1>Create profiles for kids</h1>
+            <p>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
         </div>
     </div>
     <div class="bb"></div>
