made a image folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="blackish-effect-container">
         <div class="blackish-effect-overlay"></div>
         <div class="nav">
-            <img src="icon.png" alt="icon">
+            <img src="images/icon.png" alt="icon">
             <button>Sign In</button>
         </div>
         <div class="info">
@@ -32,23 +32,23 @@
             <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
         </div>
         <div class="image">
-            <img src="tv.png" alt="tv">
+            <img src="images/tv.png" alt="tv">
             <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v" autoplay loop muted playsinline></video>
         </div>
     </div>
     <div class="bb"></div>
     <div class="sec reverse">
         <div class="image">
-            <img src="mobile.jpg" alt="tv">
+            <img src="images/mobile.jpg" alt="tv">
             <div class="movie">
                 <div class="name">
-                    <img src="boxshot.png" alt="movie">
+                    <img src="images/boxshot.png" alt="movie">
                     <div class="p">
                         <p id="p1">Stranger Things</p>
                         <p id="p2">Downloading...</p>
                     </div>
                 </div>
-                <img src="save.gif" alt="save" id="gif">
+                <img src="images/save.gif" alt="save" id="gif">
             </div>
             
         </div>
@@ -67,7 +67,7 @@
     <div class="bb"></div>
     <div class="sec reverse">
         <div class="image">
-            <img src="kid.png" alt="tv">
+            <img src="images/kid.png" alt="tv">
         </div>
         <div class="heading">
             <h1>Create profiles for kids</h1>
@@ -103,9 +103,9 @@
             </div>
             <div class="qa ans ansNo">
                 <span>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.<br><br>
-                You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</span>
+                    You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</span>
+                </div>
             </div>
-        </div>
         <div class="q">
             <div class="qa bb1 ques">
                 <p>How do I cancel?</p>
@@ -134,7 +134,49 @@
                 Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</span>
             </div>
         </div>
+        <form action="#">
+            <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
+            <div class="search p0">
+                <input type="email" name="email" id="email" placeholder="Email address">
+                <button id="start"><strong>Get Started</strong> ></button>
+            </div>
+        </form>
     </div>
+    <div class="bb"></div>
+    <footer>
+        <div class="links1">
+            <a href="#">Questions? Contact us.</a>
+        </div>
+        <div class="links2">
+            <div class="link">
+                <a href="#">FAQ</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Privacy</a>
+                <a href="#">Speed Test</a>
+            </div>
+            <div class="link">
+                <a href="#">Help Center</a>
+                <a href="#">Jobs</a>
+                <a href="#">Cookie Preferences</a>
+                <a href="#">Legal Notices</a>
+            </div>
+            <div class="link">
+                <a href="#">Account</a>
+                <a href="#">Ways To Watch</a>
+                <a href="#">Corporate Information</a>
+                <a href="#">Only on Netflix</a>
+            </div>
+            <div class="link">
+                <a href="#">Media Center</a>
+                <a href="#">Terms of Use</a>
+                <a href="#">Contact Us</a>
+            </div>
+        </div>
+        <select>
+            <option value="English" selected="English">English</option>
+        </select>
+        <div>Netflix Pakistan</div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
